removed modal html, about section and fixed featured negative spacing section

--- a/css/style.scss
+++ b/css/style.scss
@@ -569,7 +569,7 @@ section {
         h2 {
             font-size: 1.2em;
             display:block;
-            max-width:300px;
+            max-width:350px;
             margin-bottom: 3rem;
         }
 
@@ -739,7 +739,6 @@ section {
 
     .featured {
         img {
-            margin-bottom:-8em;
             box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.15);
         }
     }
